docs: implementing swagger documentation for reviews
